[gd_scene load_steps=10 format=3 uid="uid://bstxor3dd60s7"]

[ext_resource type="Script" path="res://scripts/dialouge_box.gd" id="1_1mg0m"]
[ext_resource type="Texture2D" uid="uid://pw55vc34t2qp" path="res://assets/dialouge_box.png" id="2_cbwy5"]
[ext_resource type="FontFile" uid="uid://ongt53bhj2f0" path="res://assets/GUI/fonts/pixelFont.ttf" id="3_05iwl"]
[ext_resource type="Texture2D" uid="uid://dnge83uyk55k7" path="res://assets/GUI/enter_indicator.png" id="4_8ktmy"]

[sub_resource type="LabelSettings" id="LabelSettings_1us3n"]
line_spacing = 1.0
font = ExtResource("3_05iwl")
font_size = 30

[sub_resource type="Animation" id="Animation_7pet2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialouge_box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialouge_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y57uf"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialouge_box:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialouge_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_p5fki"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialouge_box:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialouge_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5ur4"]
_data = {
"RESET": SubResource("Animation_7pet2"),
"hide": SubResource("Animation_y57uf"),
"show": SubResource("Animation_p5fki")
}

[node name="dialouge_box" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1mg0m")

[node name="dialouge_box" type="Node2D" parent="."]
visible = false

[node name="sprite" type="Sprite2D" parent="dialouge_box"]
texture_filter = 1
position = Vector2(576, 81)
scale = Vector2(3, 3)
texture = ExtResource("2_cbwy5")

[node name="text" type="Label" parent="dialouge_box"]
texture_filter = 1
offset_left = 18.0
offset_top = 55.0
offset_right = 1136.0
offset_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 10
text = "enter"
label_settings = SubResource("LabelSettings_1us3n")
autowrap_mode = 3

[node name="speaker_name" type="Label" parent="dialouge_box"]
texture_filter = 1
offset_left = 17.0
offset_top = 18.0
offset_right = 184.0
offset_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 10
text = "[SYSTEM]"
label_settings = SubResource("LabelSettings_1us3n")
autowrap_mode = 2

[node name="char_timer" type="Timer" parent="dialouge_box"]
wait_time = 0.1
autostart = true

[node name="text_finished" type="Sprite2D" parent="dialouge_box"]
texture_filter = 1
position = Vector2(1092, 26)
scale = Vector2(3, 3)
texture = ExtResource("4_8ktmy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5ur4")
}

[connection signal="timeout" from="dialouge_box/char_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dialouge_box/char_timer" to="." method="_on_char_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
